Fixed css rules when rendering card. Added custom scrollbar. Changed label content for textarea element. Added .gitignore rules.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -4,6 +4,22 @@
   box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #bab5b2; 
+  border-radius: 10px;
+}
+
 body {
   background-color: #b3cde0;
   padding: 0;
@@ -14,9 +30,8 @@ body {
 /*styles for the header*/
 .header {
   display: flex;
-
   background-color: #011f4b;
-  height: 8vh;
+  height: 6em;
   width: 100%;
   padding: 0;
   color: white;
@@ -31,7 +46,7 @@ body {
 }
 
 .flagContainer span {
-  width: 5vh;
+  width: 2.5em;
   background-size: cover;
   border-radius: 50%;
   line-height: 2.5em;
@@ -48,15 +63,16 @@ body {
 .footer {
   background-color: #011f4b;
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: row;
   justify-content: space-around;
   align-items: center;
-  height: 7vh;
+  height: 6em;
   width: 100%;
   color: white;
 }
 
 .footer i {
+  display: inline; 
   font-size: 2em;
   color: #ae5a41;
   vertical-align: middle;
@@ -75,6 +91,7 @@ body {
   padding: 1em;
   color: white;
   background-color: #03396c;
+  max-height: 500px;
 }
 
 /*form styles*/
@@ -86,6 +103,7 @@ body {
   border-radius: 20px;
   color: black;
   font-size: 1.5em;
+  max-height: 470px;
 }
 
 label {
@@ -107,7 +125,7 @@ input[type="text"] {
 textarea {
   border-radius: 1em;
   width: 100%;
-  height: 500px;
+  height: 180px;
   padding: 0.5em;
   resize: none;
   font-size: 16px;
@@ -120,8 +138,8 @@ textarea {
   display: block;
   border-radius: 0.5em;
   margin: auto;
-  height: 5vh;
-  width: 25%;
+  height: auto;
+  width: fit-content;
   font-size: 0.7em;
   transition-duration: 0.5s;
   text-align: center;
@@ -139,26 +157,29 @@ textarea {
   color: #293452;
   grid-column: 2;
   max-width: 100%;
+  max-height: 470px;
+  overflow: auto;
 }
 
 .blogPostContainer {
   display: flex;
   gap: 5px;
   flex-flow: row wrap;
+  justify-content: space-evenly;
 }
 
 .postCardContainer{
   background-color: rgb(240 240 240);
-  width: 33%;
-  height: auto;
+  width: 250px;
   border-radius: 10px;
 }
 
 /*styles for post title container*/
 .postTitleContainer {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+  padding-left: 1vmin;
   width: auto;
   height: 3em;
   background-color: #c3cb71;
@@ -174,6 +195,7 @@ textarea {
 .postBodyContainer {
   overflow-y: auto;
   height: 10em;
+  white-space: pre;
 }
 
 .postAuthor {
@@ -199,8 +221,8 @@ textarea {
 }
 
 .cardBtn {
-  width: 5vw;
-  height: 1.5vw;
+  width: 4.5em;
+  height: auto;
   border-radius: 0.5em;
   font-size: 1em;
   font-family: 'Raleway', sans-serif;
